--- a/static/bootstrap.css
+++ b/static/bootstrap.css
@@ -57,7 +57,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'inter', sans-serif !important;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -365,7 +365,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 1.2;
 }
 
@@ -6606,14 +6606,38 @@ button.bg-dark:focus {
   background-color: #fff !important;
 }
 
+
 .bg-transparent {
   background-color: transparent !important;
 }
 
 .bg-nicolas {
-border-style: none;
-border-radius: 25px;
-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.3);}
+border-style: solid;
+border-size: 1px;
+box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);}
+
+.bg-nicolas2 {
+border-size: 1px;
+background-color: #f0f0f0 !important;
+border-style: solid;
+box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+}
+
+.bg-nicolas3 {
+border-radius: 0;
+}
+
+@keyframes floating {
+	from {
+		transform: translate(0, 0px);
+	}
+	65% {
+		transform: translate(0, 10px);
+	}
+	to {
+		transform: translate(0, -0px);
+	}
+}
 
 .border {
   border: 1px solid #dee2e6 !important;
