--- a/templates/matte1.html
+++ b/templates/matte1.html
@@ -1,81 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Matte 1</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }} ">
-</head>
-<body class="bg-primary">
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container-fluid2">
-    <a class="navbar-brand" href="#">PROG2 Nicolas Steiger</a>
-  </div>
-</nav>
-<div class="bg-white bg-nicolas m-5 p-5">
-  <div>
-    <form method="POST">
-    {% if kampfid > 0 and kampfid < 113%}
-                {% if buttoneintragen == True %}
-      <h1>Runde {{ runde }}</h1>
-    <table class="table">
-      <thead class="thead-dark">
-      <tr>
-        <th scope="col" class="text-center bg-danger">{{ ringerrot }}</th>
-        <th scope="col" class="text-center">gegen</th>
-        <th scope="col" class="text-center bg-primary">{{ ringerblau }}</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td><input type="number" class="form-control mt-3" id="formGroupExampleInput10" name="punkterot" value="0" min="0" max="15"></td>
-        <td></td>
-        <td><input type="number" class="form-control mt-3" id="formGroupExampleInput11" name="punkteblau" value="0" min="0" max="15"></td>
+{% include "html_head.html" %}
 
-      </tr>
-      </tbody>
-    </table>
-    <div class="form-group text-center">
-        <input type="submit" class="btn btn-success mt-1" value="daten eintragen" name="dateneintragen">
-      {% endif %}    </div>
-    </form>
-         {% if buttoneintragen == False %}
-    <form method="POST" class="col-12 d-flex justify-content-center">
-      <input type="submit" class="btn btn-primary mt-1" value="Kampf starten / nächster Kampf" name="kampfinitiieren">
-    </form>
-      {% endif %} {% endif %}
-  </div>
-{% if kampfid > 112 %}
-<div class="m-5">
-    <p>Alle Kämpfe wurden simuliert! Gehen Sie hier zu Rangliste:</p>
-     <a href="{{ url_for('rangliste') }}" class="btn btn-success">Rangliste</a>
-</div>
-{% endif %}
-<div class="bg-white bg-nicolas m-5 p-5">
-  <h1 class="col-12 text-center mt-5">Kampfhistorie</h1>
-<div class="col-12 d-flex justify-content-center" >
-    <table class="table table-striped col-6">
-        <thead class="thead-dark">
-        <th style="width: 10%" scope="col">KampfID</th>
-        <th style="width: 40%" class="text-right bg-danger" scope="col">Ringer rot</th>
-        <th style="width: 5%" class="text-center bg-danger" scope="col">Punkte rot</th>
-        <th style="width: 5%" class="text-center bg-primary" scope="col">Punkte blau</th>
-        <th style="width: 40%" class="bg-primary" scope="col">Ringer blau</th>
-        </thead>
-        <tbody>
-        {% for kampf in kampfhistorie %}
-            <tr>
-                <td>{{ kampf[0] }}</td>
-                <td class="text-right {{'bg-success2' if kampf[7] == kampf[5] }}">{{ kampf[1] }}</td>
-                <td class="text-center">{{ kampf[2] }}</td>
-                <td class="text-center ">{{ kampf[4] }}</td>
-                <td class="{{'bg-success2' if kampf[7] == kampf[6] }}">{{ kampf[3] }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
-</div>
-</div>
-</div>
+<body class="bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid2">
+        <a class="navbar-brand" href="#">PROG2 Nicolas Steiger</a>
+      </div>
+    </nav>
+    <div class="m-5 p-5 d-flex justify-content-start bg-nicolas bg-white">
+        <div class="container-fluid col-6">
+            <div class="container-fluid bg-nicolas2 p-5">
+                <form method="POST">
+                {% if kampfid > 0 and kampfid < 113%}
+                    {% if buttoneintragen == True %}
+                        <h1>Runde {{ runde }}</h1>
+                        <table class="table">
+                            <thead class="thead-dark">
+                              <tr>
+                                <th scope="col" class="text-center bg-danger">{{ ringerrot }}</th>
+                                <th scope="col" class="text-center">gegen</th>
+                                <th scope="col" class="text-center bg-primary">{{ ringerblau }}</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><input type="number" class="form-control mt-3" id="formGroupExampleInput10" name="punkterot" value="0" min="0" max="30"></td>
+                                    <td></td>
+                                    <td><input type="number" class="form-control mt-3" id="formGroupExampleInput11" name="punkteblau" value="0" min="0" max="30"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="col-6 form-group text-center">
+                            <input type="submit" class="btn btn-success mt-1" value="daten eintragen" name="dateneintragen">
+                        </div>
+                    {% endif %}
+                    {% if buttoneintragen == False %}
+                        <input type="submit" class="btn btn-primary bg-nicolas bg-nicolas3" value="Kampf starten / nächster Kampf" name="kampfinitiieren">
+                    {% endif %}
+                {% endif %}
+                </form>
+                {% if kampfid > 112 %}
+                <div class="m-5">
+                    <p>Alle Kämpfe wurden simuliert! Gehen Sie hier zu Rangliste:</p>
+                    <a href="{{ url_for('rangliste') }}" class="btn btn-success">Rangliste</a>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+
+        <div class="container-fluid col-6">
+            <div class="p-5 container-fluid bg-nicolas2">
+                <h1 class="text-center">Kampfhistorie</h1>
+                <table class="table table-striped">
+                    <thead class="thead-dark">
+                        <th style="width: 10%" scope="col">KampfID</th>
+                        <th style="width: 40%" class="text-right bg-danger" scope="col">Ringer rot</th>
+                        <th style="width: 5%" class="text-center bg-danger" scope="col">Punkte rot</th>
+                        <th style="width: 5%" class="text-center bg-primary" scope="col">Punkte blau</th>
+                        <th style="width: 40%" class="bg-primary" scope="col">Ringer blau</th>
+                    </thead>
+                    <tbody>
+                        {% for kampf in kampfhistorie %}
+                        <tr>
+                            <td>{{ kampf[0] }}</td>
+                            <td class="text-right {{'bg-success2' if kampf[7] == kampf[5] }}">{{ kampf[1] }}</td>
+                            <td class="text-center">{{ kampf[2] }}</td>
+                            <td class="text-center ">{{ kampf[4] }}</td>
+                            <td class="{{'bg-success2' if kampf[7] == kampf[6] }}">{{ kampf[3] }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
